# terrainslib

./: main.py  pyproject.toml  test.py
configs/: config.yaml
configs/terrain/: balance_beam.yaml  defaults.yaml  discrete_boxes.yaml  hurdles.yaml  narrow_corridor.yaml  pyramid_slope.yaml  pyramid_stairs.yaml  stairs.yaml  stepping_stones.yaml
terrainslib/: api.py
terrainslib/common/: __init__.py  geometry.py  layout.py  mesh.py  range.py  roughness.py  terrain.py  terrain_cfg.py  utils.py
terrainslib/common/post/: __init__.py  edge.py  post_processing.py  roughness.py
terrainslib/common/utils/: __init__.py  mesh.py  misc.py
terrainslib/generators/: __init__.py  balance_beam.py  discrete_boxes.py  hurdles.py  narrow_corridor.py  pyramid_slope.py  pyramid_stairs.py  registry.py  stairs.py  stepping_stones.py
terrainslib/generators/hf_terrains/: balance_beam.py  pyramid_slope.py
terrainslib/generators/mesh_terrains/: discrete_boxes.py  hurdles.py  narrow_corridor.py  pyramid_stairs.py  stepping_stones.py
terrainslib/parameters/: __init__.py  parameters.py
terrainslib/visualize/: __init__.py  draw_3d.py  plot_2d.py  plot_3d.py
