[project]
name = "terrainslib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3.3",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "open3d>=0.19.0",
    "pytest>=9.1.1",
    "tqdm>=4.68.3",
    "trimesh>=4.12.2",
]
